--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "live-server",
+    "dev": "sass --watch ./8-style-host-slotted/my-component.scss:./8-style-host-slotted/my-component.css & live-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
